--- a/kdabet_umbrella/apps/kdabet_frontend/assets/package.json
+++ b/kdabet_umbrella/apps/kdabet_frontend/assets/package.json
@@ -7,6 +7,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remount": "^1.0.0",
+    "vega": "^5.27.0",
+    "vega-embed": "^6.24.0",
+    "vega-lite": "^5.16.3",
     "viem": "^1.19.13",
     "web3": "^4.3.0"
   },
