--- a/kdabet_umbrella/apps/kdabet_frontend/assets/package.json
+++ b/kdabet_umbrella/apps/kdabet_frontend/assets/package.json
@@ -1,20 +1,15 @@
 {
   "dependencies": {
-    "@ryangjchandler/alpine-tooltip": "^1.3.0",
-    "@wagmi/core": "^1.4.10",
-    "@web3modal/wagmi": "^3.4.0",
-    "alpinejs": "^3.13.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remount": "^1.0.0",
+    "alpinejs": "^3.13.3",
+    "pact-lang-api": "^4.3.6",
     "vega": "^5.27.0",
     "vega-embed": "^6.24.0",
-    "vega-lite": "^5.16.3",
-    "viem": "^1.19.13",
-    "web3": "^4.3.0"
+    "vega-lite": "^5.16.3"
   },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17"
+  "browser": {
+    "http": false,
+    "https": false,
+    "url": true,
+    "util": true
   }
 }
